--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       <ul class="info">
           <li>&copy; SamICan 2022</li>
           <li>Jl. Anggrek No. 1 Patokan, Kab. Situbondo - Indonesia</li>
-          <li>Tel: (contoh)</li>
+          <li>Tel: +62 877-1252-0335</li>
           <li>Email: <a href="#">contact@samican.ml</a></li>
       </ul>
       <ul class="CTA">
