--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <li>&copy; SamICan 2022</li>
           <li>Jl. Anggrek No. 1 Patokan, Kab. Situbondo - Indonesia</li>
           <li>Tel: +62 877-1252-0335</li>
-          <li>Email: <a href="#">contact@samican.ml</a></li>
+          <li>Email: <a href="#">contact@samican.cf</a></li>
       </ul>
       <ul class="CTA">
           <li><a href="#">PERMISSIONS AND COPYRIGHT</a></li>
