--- a/order.html
+++ b/order.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://i.ibb.co/qDJcv8Y/Sam-Ican-Logo-1080x1080-58448-E1.png" rel="icon" />
-    <title>SamICan - Article</title>
+    <title>SamICan - Order</title>
     <meta property="og:description"
-    content="Penjelasan Ikan Cakalan" />
+    content="Ingin Order/Membeli SamICan? Langsung aja klik linknya" />
     <meta property="og:image" content="https://i.ibb.co/Rjd8f4f/Proyek-Baru-30-362-A1-AF.png" />
     <meta property="og:url" content="order.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
