--- a/article-cakalang.html
+++ b/article-cakalang.html
@@ -21,7 +21,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <article>
-	<header style="background-image: url('https://images.unsplash.com/photo-1520808663317-647b476a81b9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2073&q=80');">
+	<header style="background-image: url('https://i.ibb.co/2WP05Dh/Proyek-Baru-41-A63-D2-A3.png');">
 		<div class="upper-header">
 			<div class="mini-title">article</div>
 			<div class="date-since">
